--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ligue des droits et libertés - The Boyzs</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="disclaimer"><p>Ce site est un une refonte dans le contexte d'un projet étudiant.   <strong>Consulter le site original</strong></p></div>
     <h1>Ligue des droits et libertés - The Boyzs</h1>
     <p>Membres: Maïk Hamel, Pierre-Luc Proulx, Raphaël Dumont</p><br>
     <a href="https://liguedesdroits.ca/">Lien vers le site original</a>
     <a href="https://github.com/TheBoyzs/droits-et-libertes-the-boyzs/tree/main">Lien vers le repo Github</a>
+    <script src="main.js"></script>
 </body>
 </html>
