--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <a href="https://liguedesdroits.ca/">Lien vers le site original</a>
     <a href="https://github.com/TheBoyzs/droits-et-libertes-the-boyzs/tree/main">Lien vers le repo Github</a>
     <script src="main.js"></script>
+    <footer>
+        
+    </footer>
 </body>
 </html>
