--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <nav>
+            
+        </nav>
+    </header>
     <div class="disclaimer"><p>Ce site est un une refonte dans le contexte d'un projet étudiant.   <strong>Consulter le site original</strong></p></div>
     <h1>Ligue des droits et libertés - The Boyzs</h1>
     <p>Membres: Maïk Hamel, Pierre-Luc Proulx, Raphaël Dumont</p><br>
@@ -14,7 +19,7 @@
     <a href="https://github.com/TheBoyzs/droits-et-libertes-the-boyzs/tree/main">Lien vers le repo Github</a>
     <script src="main.js"></script>
     <footer>
-        
+
     </footer>
 </body>
 </html>
