--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            
+            <button>Donner</button>
         </nav>
     </header>
     <div class="disclaimer"><p>Ce site est un une refonte dans le contexte d'un projet étudiant.   <strong>Consulter le site original</strong></p></div>
@@ -19,7 +19,8 @@
     <a href="https://github.com/TheBoyzs/droits-et-libertes-the-boyzs/tree/main">Lien vers le repo Github</a>
     <script src="main.js"></script>
     <footer>
-
+        <a link="">Accueil</a>
+        <a link="">Luttes</a>
     </footer>
 </body>
 </html>
