--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Raphael, Maik, Pierre-Luc" content="John Doe">
     <title>Ligue des droits et libertés - The Boyzs</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -27,11 +29,10 @@
         <div class="footer-left">
         </div>
         <div class="footer-center">
-            <a link="">Accueil</a>
-            <a link="">Luttes</a>
+           
         </div>
         <div class="footer-right">
-            
+
         </div>
 
     </footer>
