--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ligue des droits et libertés - The Boyzs</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="disclaimer"><p>Ce site est un une refonte dans le contexte d'un projet étudiant.   <strong>Consulter le site original</strong></p></div>
+    <div class="disclaimer">
+        <p>Ce site est un une refonte dans le contexte d'un projet étudiant.<a href="">Consulter le site original</a></strong></p>
+        <i class="fa-solid fa-x"></i>
+    </div>
     <h1>Ligue des droits et libertés - The Boyzs</h1>
     <p>Membres: Maïk Hamel, Pierre-Luc Proulx, Raphaël Dumont</p><br>
     <a href="https://liguedesdroits.ca/">Lien vers le site original</a>
     <a href="https://github.com/TheBoyzs/droits-et-libertes-the-boyzs/tree/main">Lien vers le repo Github</a>
     <script src="main.js"></script>
+    <script src="https://kit.fontawesome.com/b6c9a53dc1.js" crossorigin="anonymous"></script>
 </body>
 </html>
