pushing my shit

--- a/index.html
+++ b/index.html
@@ -21,28 +21,39 @@
             <button>Donner</button>
         </nav>
     </header>
-    <p>Membres: Maïk Hamel, Pierre-Luc Proulx, Raphaël Dumont</p><br>
-    <a href="https://liguedesdroits.ca/">Lien vers le site original</a>
-    <a href="https://github.com/TheBoyzs/droits-et-libertes-the-boyzs/tree/main">Lien vers le repo Github</a>
-    <script src="main.js"></script>
-    <footer class="footer">
-        <div class="footer">
-
-        </div>
-        <div class="footer">
-
-
-        </div>
-        <div class="footer">
-
-        </div>
-        <div class="legal">
-            <p>&copy; 2024 Patente. All rights deserved.</p>
-            <div class="legal__links">
-                <span>Made with Visual Studio Code</span>
+    <section>
+        <p>Membres: Maïk Hamel, Pierre-Luc Proulx, Raphaël Dumont</p><br>
+        <a href="https://liguedesdroits.ca/">Lien vers le site original</a>
+        <a href="https://github.com/TheBoyzs/droits-et-libertes-the-boyzs/tree/main">Lien vers le repo Github</a>
+        <footer class="footer">
+            <div class="footer">
+                <p>insert some shit</p>
             </div>
-        </div>
+            <div class="footer">
+                <a link="#">Accueil</a>
+                <a link="#">Luttes</a>
+                <a link="#">Équipe</a>
+                <a link="#">Nouvelles</a>
+                <a link="#">À Propos</a>
+                <a link="#">Contant</a>
+                <a link="#">FAQ</a>
 
+            </div>
+            <div class="footer">
+                <p id="address">469 Jean-Talon Ouest, bureau 105</p><br>
+                <p id="ville">Montréal, Québec H3N 1R4</p><br>
+                <p id="cell"></p>Tél.: 514 849-7717<br>
+                <p id="media">Cell. médias: 514-715-7727</p><br>
+                <div class="legal">
+                    <p>&copy; 2024 TheBoysz. All rights deserved.</p>
+                    <div class="legal__links">
+                        <span>Made with Visual Studio Code</span>
+                    </div>
+                </div>
+            </div>
+    </section>
     </footer>
+    <script src="main.js"></script>
 </body>
+
 </html>
