--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <div class="disclaimer">
         <p>Ce site est un une refonte dans le contexte d'un projet étudiant. <strong>Consulter le site original</strong>
+        <i class="fa-solid fa-x"></i>
         </p>
     </div>
     <header>
