--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="disclaimer">
         <p>Ce site est un une refonte dans le contexte d'un projet étudiant. <strong>Consulter le site original</strong>
-        <i class="fa-solid fa-x"></i>
+            <i class="fa-solid fa-x"></i>
         </p>
     </div>
     <header>
@@ -39,10 +39,16 @@
 
         </div>
         <div class="footer">
-
+            <a href="#">Accueil</a>
+            <a href="#">Luttes</a>
+            <a href="#">Équipe</a>
+            <a href="#">Nouvelles</a>
+            <a href="#">À propos</a>
+            <a href="#">contact</a>
+            <a href="#">FAQ</a>
         </div>
         <div class="legal">
-            <p>&copy; 2024 Patente. All rights deserved.</p>
+            <p>&copy; 2024 Droit d'auteur TheBoyzs. All Rights reserved</p>
             <div class="legal__links">
                 <span>Made with Visual Studio Code</span>
             </div>
@@ -50,4 +56,5 @@
 
     </footer>
 </body>
+
 </html>
