--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <header>
         <nav>
             <h1>Ligue des droits et libertés - The Boyzs</h1>
+
             <button>Donner</button>
         </nav>
     </header>
@@ -30,6 +31,7 @@
     <a href="https://github.com/TheBoyzs/droits-et-libertes-the-boyzs/tree/main">Lien vers le repo Github</a>
     <script src="main.js"></script>
     <script src="https://kit.fontawesome.com/b6c9a53dc1.js" crossorigin="anonymous"></script>
+    <!-- Footer -->
     <footer class="footer">
         <div class="footer">
 
