--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 
 <body>
     <div class="disclaimer">
-        <p>Ce site est un une refonte dans le contexte d'un projet étudiant. <strong>Consulter le site original</strong>
-            <i class="fa-solid fa-x"></i>
+        <p>Ce site est un une refonte dans le contexte d'un projet étudiant.            
+            <strong>Consulter le site original</strong>
+            
         </p>
+        <i class="fa-solid fa-x"></i>
     </div>
     <header>
         <nav>
