--- a/index.html
+++ b/index.html
@@ -19,15 +19,19 @@
             <strong>Consulter le site original</strong>
             
         </p>
-        <i class="fa-solid fa-x"></i>
+        <i class="fa-solid fa-x fa-1x"></i>
     </div>
     <header>
+        <img src="./sources/medias/ldl-logo-horizontale-270.png" alt="logoldl">
         <nav>
-            <h1>Ligue des droits et libertés - The Boyzs</h1>
-
-            <button>Donner</button>
+            <div class="menu">
+                <i class="fa-solid fa-bars fa-3x"></i>
+            </div>
         </nav>
     </header>
+    <div>
+        <button>Donner</button>
+    </div>
     <p>Membres: Maïk Hamel, Pierre-Luc Proulx, Raphaël Dumont</p><br>
     <a href="https://liguedesdroits.ca/">Lien vers le site original</a>
     <a href="https://github.com/TheBoyzs/droits-et-libertes-the-boyzs/tree/main">Lien vers le repo Github</a>
