--- a/index.html
+++ b/index.html
@@ -54,29 +54,8 @@
     <script src="main.js"></script>
     <script src="https://kit.fontawesome.com/b6c9a53dc1.js" crossorigin="anonymous"></script>
     <!-- Footer -->
-    <footer class="footer">
-        <div class="footer">
-
-        </div>
-        <div class="footer">
-
-
-        </div>
-        <div class="footer">
-            <a href="#">Accueil</a>
-            <a href="#">Luttes</a>
-            <a href="#">Équipe</a>
-            <a href="#">Nouvelles</a>
-            <a href="#">À propos</a>
-            <a href="#">contact</a>
-            <a href="#">FAQ</a>
-        </div>
-        <div class="legal">
-            <p>&copy; 2024 Droit d'auteur TheBoyzs. All Rights reserved</p>
-            <div class="legal__links">
-                <span>Made with Visual Studio Code</span>
-            </div>
-            <div class="footer">
+    <footer class="footer-wrapper">
+            <div class="footer__item">
                 <a link="#">Accueil</a>
                 <a link="#">Luttes</a>
                 <a link="#">Équipe</a>
@@ -84,13 +63,14 @@
                 <a link="#">À Propos</a>
                 <a link="#">Contant</a>
                 <a link="#">FAQ</a>
-
             </div>
-            <div class="footer">
+            <div class="footer__item">
                 <p id="address">469 Jean-Talon Ouest, bureau 105</p><br>
                 <p id="ville">Montréal, Québec H3N 1R4</p><br>
                 <p id="cell"></p>Tél.: 514 849-7717<br>
                 <p id="media">Cell. médias: 514-715-7727</p><br>
+            </div>
+            <div class="footer__item">
                 <div class="legal">
                     <p>&copy; 2024 TheBoysz. All rights deserved.</p>
                     <div class="legal__links">
