--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="footer__item">
                 <p id="address">469 Jean-Talon Ouest, bureau 105</p><br>
                 <p id="ville">Montréal, Québec H3N 1R4</p><br>
-                <p id="cell"></p>Tél.: 514 849-7717<br>
+                <p id="cell">Tél.: 514 849-7717</p><br>
                 <p id="media">Cell. médias: 514-715-7727</p><br>
             </div>
             <div class="footer__item">
