--- a/index.html
+++ b/index.html
@@ -74,18 +74,25 @@
                 <li><a link="#">Contant</a></li>
                 <li><a link="#">FAQ</a></li>
             </ul>
-            <div class="legal">
-                <p>&copy; 2024 TheBoysz. All rights deserved.</p>
-                <div class="legal__links">
-                    <span>Made with Visual Studio Code</span>
-                </div>
+            <hr>
+            <div class="footer-wrapper__legal">
+                <p>&copy; 2024 TheBoysz. All rights deserved.</p><br>
+                    <p>Made with Visual Studio Code</p>
             </div>
         </div>
-        <div class="footer-wrapper__item">
+        <div class="footer-wrapper__info">
             <p id="address">469 Jean-Talon Ouest, bureau 105</p><br>
             <p id="ville">Montréal, Québec H3N 1R4</p><br>
             <p id="cell">Tél.: 514 849-7717</p><br>
             <p id="media">Cell. médias: 514-715-7727</p><br>
+            <div class="footer-wrapper__buttons">
+                <button>
+                    S'INFORMER
+                </button>
+                <button>
+                    DONNER
+                </button>
+            </div>
         </div>
 
         </section>
