--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
     <header class="navbar">
         <div class="navbar-top">
             <div class="navbar-top__searchbar"></div>
-                <i class="fa-solid fa-magnifying-glass fa-2x"></i>
-                <input type="text" placeholder="  RECHERCHER">
-            </div>
+            <i class="fa-solid fa-magnifying-glass fa-2x"></i>
+            <input type="text" placeholder="  RECHERCHER">
+        </div>
 
-            <img class="logo" src="./sources/medias/ldl-logo-horizontale-270.png" alt="logoldl">
+        <img class="logo" src="./sources/medias/ldl-logo-horizontale-270.png" alt="logoldl">
 
-            <div class="navbar-top__buttons">
-                <button class="cta-button">S'INFORMER</button>
-                <button class="cta_button">DONNER</button>
-            </div>
+        <div class="navbar-top__buttons">
+            <button class="cta-button">S'INFORMER</button>
+            <button class="cta_button">DONNER</button>
+        </div>
 
-            <div class="mobile-menu">
-                <div class="hamburger">
-                  <span></span>
-                  <span></span>
-                  <span></span>
-                </div>
+        <div class="mobile-menu">
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
         </div>
+
 
         <nav class="navbar-bottom">
             <ul class="nav-links">
@@ -56,17 +56,17 @@
 
         <div class="mobile-menu-overlay">
             <div class="mobile-menu-content">
-              <div class="logo">Logo</div>
-              <input type="text" class="search" placeholder="Recherche...">
-              <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
-              <button class="cta-button">Call to Action</button>
+                <div class="logo">Logo</div>
+                <input type="text" class="search" placeholder="Recherche...">
+                <ul class="nav-links">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                <button class="cta-button">Call to Action</button>
             </div>
-          </div>
+        </div>
     </header>
 
     <script>
@@ -74,8 +74,8 @@
         const mobileMenuOverlay = document.querySelector('.mobile-menu-overlay');
 
         hamburger.addEventListener('click', () => {
-        mobileMenuOverlay.classList.toggle('show');
-        hamburger.parentElement.classList.toggle('open');
+            mobileMenuOverlay.classList.toggle('show');
+            hamburger.parentElement.classList.toggle('open');
         });
     </script>
 
@@ -108,7 +108,7 @@
             <hr>
             <div class="footer-wrapper__legal">
                 <p>&copy; 2024 TheBoysz. All rights deserved.</p><br>
-                    <p>Made with Visual Studio Code</p>
+                <p>Made with Visual Studio Code</p>
             </div>
         </div>
         <div class="footer-wrapper__info">
@@ -119,7 +119,7 @@
             <div class="footer-wrapper__buttons">
                 <button>
                     S'INFORMER
-                </button>
+                </button><br>
                 <button>
                     DONNER
                 </button>
