--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
     <!-- Footer -->
     <footer class="footer-wrapper">
         <div>
+            <a href="#">
+                <img class="footer-wrapper__logo" src="sources/medias/ldl-icone.png">
+                <span style="color: white; text-decoration: none; text-transform: none; text-align: center;">
+                    <p>Ligue des<br><b>droits</b> et <b>libertés</b></p>
+                </span>
+            </a>
             <ul class="footer-wrapper__social-icons">
                 <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
                 <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
