--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
     <footer class="footer-wrapper">
         <div>
             <a href="#">
-                <img class="footer-wrapper__logo" src="sources/medias/ldl-icone.png">
-                <span style="color: white; text-decoration: none; text-transform: none; text-align: center;">
+                <img class="footer-wrapper__logo" src="sources/medias/ldl-icone.png" alt="logo">
+                <span
+                    style="color: white; text-decoration: none; text-transform: none; text-align: center; font-size: 30px;">
                     <p>Ligue des<br><b>droits</b> et <b>libertés</b></p>
                 </span>
             </a>
