--- a/index.html
+++ b/index.html
@@ -15,56 +15,65 @@
 </head>
 
 <body>
-    <div class="disclaimer">
+    <div class="disclaimer" id="disclaimer">
         <p>Ce site est un une refonte dans le contexte d'un projet étudiant.
             <strong><a href="#">Consulter le site original</a></strong>
 
         </p>
-        <i class="fa-solid fa-x fa-2x"></i>
+        <i class="fa-solid fa-x fa-2x" id="disclaimer-close"></i>
     </div>
     <header class="navbar">
         <div class="navbar-top">
-            <div class="navbar-top__searchbar"></div>
-            <i class="fa-solid fa-magnifying-glass fa-2x"></i>
-            <input type="text" placeholder="  RECHERCHER">
-        </div>
-
-        <img class="logo" src="./sources/medias/ldl-logo-horizontale-270.png" alt="logoldl">
-
-        <div class="navbar-top__buttons">
-            <button class="cta-button">S'INFORMER</button>
-            <button class="cta_button">DONNER</button>
-        </div>
-
-        <div class="mobile-menu">
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
+            <div class="navbar-top__searchbar">
+                <i class="fa-solid fa-magnifying-glass fa-2x"></i>
+                <input type="text" placeholder="  RECHERCHER">
             </div>
+        
+            <img class="logo" src="./sources/medias/ldl-logo-horizontale-270.png" alt="logoldl">
+
+            <div class="navbar-top__buttons">
+                <button class="cta-button secondary">S'INFORMER</button>
+                <button class="cta-button">DONNER</button>
+            </div>
+
         </div>
 
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
 
         <nav class="navbar-bottom">
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">LUTTES</a></li>
+                <li><a href="#">ÉQUIPE</a></li>
+                <li><a href="#">NOUVELLES</a></li>
+                <li><a href="#">À PROPOS</a></li>
+                <li><a href="#">CONTACT</a></li>
+                <li><a href="#">FAQ</a></li>
             </ul>
         </nav>
 
         <div class="mobile-menu-overlay">
             <div class="mobile-menu-content">
-                <div class="logo">Logo</div>
-                <input type="text" class="search" placeholder="Recherche...">
+                <img class="logo" src="./sources/medias/ldl-logo-horizontale-270.png" alt="logoldl">
+                <div class="searchbar">
+                    <i class="fa-solid fa-magnifying-glass fa-2x"></i>
+                    <input type="text" placeholder="  RECHERCHER">
+                </div>
                 <ul class="nav-links">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">LUTTES</a></li>
+                    <li><a href="#">ÉQUIPE</a></li>
+                    <li><a href="#">NOUVELLES</a></li>
+                    <li><a href="#">À PROPOS</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="#">FAQ</a></li>
                 </ul>
-                <button class="cta-button">Call to Action</button>
+                <div class="buttons">
+                    <button class="cta-button secondary">S'INFORMER</button>
+                    <button class="cta-button">DONNER</button>
+                </div>
             </div>
         </div>
     </header>
@@ -75,7 +84,14 @@
 
         hamburger.addEventListener('click', () => {
             mobileMenuOverlay.classList.toggle('show');
-            hamburger.parentElement.classList.toggle('open');
+            hamburger.classList.toggle('open');
+        });
+    </script>
+    <script>
+        const closeButton = document.getElementById("disclaimer-close");
+        const disclaimer = document.getElementById("disclaimer");
+        closeButton.addEventListener('click', () => {
+            disclaimer.style.display="none";
         });
     </script>
 
