--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
     <!-- Footer -->
     <footer class="footer-wrapper">
         <div>
+            <img class="footer-wrapper__logo" src="/sources/medias/ldl-icone.png">
+            <span class="text-logo"><p>Ligue des <br> Droits et libertés</p></span>
             <ul class="footer-wrapper__social-icons">
                 <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
                 <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
