--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <footer class="footer-wrapper">
         <div>
             <img class="footer-wrapper__logo" src="/sources/medias/ldl-icone.png">
-            <span class="text-logo" style="font-size: 30px; text-align: center;"><p>Ligue des <br> Droits et libertés</p></span>
+            <span class="text-logo" style="font-size: 30px; text-align: center"><p>Ligue des <br> <b>Droits</b> et <b>libertés</b></p></span>
             <ul class="footer-wrapper__social-icons">
                 <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
                 <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
