--- a/index.html
+++ b/index.html
@@ -117,7 +117,14 @@
     </section>
     <section class="section-wrapper">
         <div class="section-wrapper__no1">
+            <h1>À la une</h1>
+            <hr>
+            <div class="card">
+                <img src="sources/medias/nouvelle1.png" alt="nouvelle #1" style="width:100%">
+                <div class="container">
 
+                </div>
+            </div> 
         </div>
 
     </section>
