--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
                 <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
                 <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
-                <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
+                <li><a class="linkedin" href="https://fr.linkedin.com/company/liguedesdroits"><i class="fa fa-linkedin"></i></a></li>
             </ul>
         </div>
         <div>
