--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
         </div>
     </header>
-    <section>
+    <section name="carrousel">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
@@ -114,91 +114,104 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-        <<<<<<< HEAD=======</section>
-            <section class="section-wrapper">
-                <div class="section-wrapper__no1">
-                    <h1>À la une</h1>
-                    <hr>
-                    <div class="card">
-                        <img src="sources/medias/nouvelle1.png" alt="nouvelle #1" style="width:100%">
-                        <div class="container">
+    </section>
+    <section>
+        <h1>À la une</h1>
+        <hr>
+        <div class="section-card">
+            <div class="section-card__card">
+                <img src="sources/medias/nouvelle1.png" alt="nouvelle #1">
+                <div class="section-card__container">
+                    <h4>Pour l'interdiction des interpellations policières une bonne fois pour toute</h4>
+                    <h5>4 septembre 2024 | Communiqués</h5>
 
-                        </div>
-                    </div>
                 </div>
-
-                >>>>>>> origin/integration_accueil
-            </section>
-            <script>
-                const hamburger = document.querySelector('.hamburger');
-                const mobileMenuOverlay = document.querySelector('.mobile-menu-overlay');
-
-                hamburger.addEventListener('click', () => {
-                    mobileMenuOverlay.classList.toggle('show');
-                    hamburger.classList.toggle('open');
-                });
-            </script>
-            <script>
-                const closeButton = document.getElementById("disclaimer-close");
-                const disclaimer = document.getElementById("disclaimer");
-                closeButton.addEventListener('click', () => {
-                    disclaimer.style.display = "none";
-                });
-            </script>
-
-
-            <p>Membres: Maïk Hamel, Pierre-Luc Proulx, Raphaël Dumont</p><br>
-            <a href="https://liguedesdroits.ca/">Lien vers le site original</a>
-            <a href="https://github.com/TheBoyzs/droits-et-libertes-the-boyzs/tree/main">Lien vers le repo Github</a>
-            <script src="main.js"></script>
-            <script src="https://kit.fontawesome.com/b6c9a53dc1.js" crossorigin="anonymous"></script>
-            <!-- Footer -->
-            <footer class="footer-wrapper">
-                <div class="footer-wrapper__socialtree">
-                    <img class="footer-wrapper__logo" src="/sources/medias/ldl-icone.png">
-                    <span class="text-logo" style="font-size: 30px; text-align: center">
-                        <p>Ligue des <br> <b>Droits</b> et <b>libertés</b></p>
-                    </span>
-                    <ul class="footer-wrapper__social-icons">
-                        <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
-                        <li><a class="linkedin" href="https://fr.linkedin.com/company/liguedesdroits"><i
-                                    class="fa fa-linkedin"></i></a></li>
-                    </ul>
+            </div>
+            <div class="section-card__card">
+                <img src="sources/medias/nouvelle2.png" alt="nouvelle #2">
+                <div class="section-card__container">
+                    <h4>Le Canada doit stopper de façon urgente l'exportation d'armes à destination d'Israël</h4>
+                    <h5>27 août 2024 | Lettre ouverte</h5>
                 </div>
-                <div>
-                    <ul class="footer-wrapper__links">
-                        <li><a link="#">Accueil</a></li>
-                        <li> <a link="#">Luttes</a></li>
-                        <li><a link="#">Équipe</a></li>
-                        <li><a link="#">Nouvelles</a></li>
-                        <li><a link="#">À Propos</a></li>
-                        <li><a link="#">Contant</a></li>
-                        <li><a link="#">FAQ</a></li>
-                    </ul>
-                    <hr>
-                    <div class="footer-wrapper__legal">
-                        <p>&copy; 2024 TheBoysz. All rights deserved.</p><br>
-                        <p>Made with Visual Studio Code</p>
-                    </div>
+            </div>
+            <div class="section-card__card">
+                <img src="sources/medias/nouvelle3.png" alt="nouvelle #3">
+                <div class="section-card__container">
+                    <h4>Haine et panique morale au croisement de la transphobie et de la domination adulte.</h4>
+                    <h5>27 août 2024 | Lettre ouverte</h5>
                 </div>
-                <div class="footer-wrapper__info">
-                    <p id="address">469 Jean-Talon Ouest, bureau 105</p><br>
-                    <p id="ville">Montréal, Québec H3N 1R4</p><br>
-                    <p id="cell">Tél.: 514 849-7717</p><br>
-                    <p id="media">Cell. médias: 514-715-7727</p><br>
-                    <div class="footer-wrapper__buttons">
-                        <button>
-                            S'INFORMER
-                        </button><br>
-                        <button>
-                            DONNER
-                        </button>
-                    </div>
-                </div>
-            </footer>
-            <script src="main.js"></script>
+            </div>
+    </section>
+    <script>
+        const hamburger = document.querySelector('.hamburger');
+        const mobileMenuOverlay = document.querySelector('.mobile-menu-overlay');
+
+        hamburger.addEventListener('click', () => {
+            mobileMenuOverlay.classList.toggle('show');
+            hamburger.classList.toggle('open');
+        });
+    </script>
+    <script>
+        const closeButton = document.getElementById("disclaimer-close");
+        const disclaimer = document.getElementById("disclaimer");
+        closeButton.addEventListener('click', () => {
+            disclaimer.style.display = "none";
+        });
+    </script>
+
+
+    <p>Membres: Maïk Hamel, Pierre-Luc Proulx, Raphaël Dumont</p><br>
+    <a href="https://liguedesdroits.ca/">Lien vers le site original</a>
+    <a href="https://github.com/TheBoyzs/droits-et-libertes-the-boyzs/tree/main">Lien vers le repo Github</a>
+    <script src="main.js"></script>
+    <script src="https://kit.fontawesome.com/b6c9a53dc1.js" crossorigin="anonymous"></script>
+    <!-- Footer -->
+    <footer class="footer-wrapper">
+        <div class="footer-wrapper__socialtree">
+            <img class="footer-wrapper__logo" src="/sources/medias/ldl-icone.png">
+            <span class="text-logo" style="font-size: 30px; text-align: center">
+                <p>Ligue des <br> <b>Droits</b> et <b>libertés</b></p>
+            </span>
+            <ul class="footer-wrapper__social-icons">
+                <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
+                <li><a class="linkedin" href="https://fr.linkedin.com/company/liguedesdroits"><i
+                            class="fa fa-linkedin"></i></a></li>
+            </ul>
+        </div>
+        <div>
+            <ul class="footer-wrapper__links">
+                <li><a link="#">Accueil</a></li>
+                <li> <a link="#">Luttes</a></li>
+                <li><a link="#">Équipe</a></li>
+                <li><a link="#">Nouvelles</a></li>
+                <li><a link="#">À Propos</a></li>
+                <li><a link="#">Contant</a></li>
+                <li><a link="#">FAQ</a></li>
+            </ul>
+            <hr>
+            <div class="footer-wrapper__legal">
+                <p>&copy; 2024 TheBoysz. All rights deserved.</p><br>
+                <p>Made with Visual Studio Code</p>
+            </div>
+        </div>
+        <div class="footer-wrapper__info">
+            <p id="address">469 Jean-Talon Ouest, bureau 105</p><br>
+            <p id="ville">Montréal, Québec H3N 1R4</p><br>
+            <p id="cell">Tél.: 514 849-7717</p><br>
+            <p id="media">Cell. médias: 514-715-7727</p><br>
+            <div class="footer-wrapper__buttons">
+                <button>
+                    S'INFORMER
+                </button><br>
+                <button>
+                    DONNER
+                </button>
+            </div>
+        </div>
+    </footer>
+    <script src="main.js"></script>
 </body>
 
 </html>
