added 2 other sections

--- a/index.html
+++ b/index.html
@@ -127,20 +127,33 @@
 
                 </div>
             </div>
-            <div class="section-card__card">
+            <article class="section-card__card">
                 <img src="sources/medias/nouvelle2.png" alt="nouvelle #2">
                 <div class="section-card__container">
                     <h4>Le Canada doit stopper de façon urgente l'exportation d'armes à destination d'Israël</h4>
                     <h5>27 août 2024 | Lettre ouverte</h5>
                 </div>
-            </div>
-            <div class="section-card__card">
+            </article>
+            <article class="section-card__card">
                 <img src="sources/medias/nouvelle3.png" alt="nouvelle #3">
                 <div class="section-card__container">
                     <h4>Haine et panique morale au croisement de la transphobie et de la domination adulte.</h4>
                     <h5>27 août 2024 | Lettre ouverte</h5>
                 </div>
-            </div>
+            </article>
+    </section>
+    <section style="background-color: white;">
+        <div class="luttes-wrapper">
+            <h1>Nos luttes</h1>
+            <hr>
+        </div>
+
+    </section>
+    <section>
+        <div class="testimony-wrapper">
+            <h1>Témoignages</h1>
+            <hr>
+        </div>
     </section>
     <script>
         const hamburger = document.querySelector('.hamburger');
