--- a/index.html
+++ b/index.html
@@ -153,6 +153,27 @@
         <div class="testimony-wrapper">
             <h1>Témoignages</h1>
             <hr>
+            <!--Témoignage 1-->
+            <article class="testimony-wrapper__testimonial">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.</p>
+                <div class="testimony-wrapper__source">Source d'où provient le témoignage</div>
+            </article>
+            <!--Témoignage 2-->
+            <article class="testimony-wrapper__testimonial"></article>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea commodo consequat.</p>
+            <div class="testimony-wrapper__source">Source d'où provient le témoignage</div>
+            </article>
+            <!--Témoignage 3-->
+            <article class="testimony-wrapper__testimonial"></article>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea commodo consequat.</p>
+            <div class="testimony-wrapper__source">Source d'où provient le témoignage</div>
+            </article>
         </div>
     </section>
     <script>
