--- a/index.html
+++ b/index.html
@@ -150,29 +150,31 @@
 
     </section>
     <section>
+        <h1>Témoignages</h1>
+        <hr>
         <div class="testimony-wrapper">
-            <h1>Témoignages</h1>
-            <hr>
             <!--Témoignage 1-->
-            <article class="testimony-wrapper__testimonial">
+            <article class="testimony-wrapper__testimonial" id="left">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                    ut
+                    aliquip ex ea commodo consequat.</p>
+                <p class="testimony-wrapper__source">Source d'où provient le témoignage</p>
+            </article>
+            <!--Témoignage 2-->
+            <article class="testimony-wrapper__testimonial right-align" dir="rtl">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.</p>
-                <div class="testimony-wrapper__source">Source d'où provient le témoignage</div>
-            </article>
-            <!--Témoignage 2-->
-            <article class="testimony-wrapper__testimonial"></article>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.</p>
-            <div class="testimony-wrapper__source">Source d'où provient le témoignage</div>
+                <p class="testimony-wrapper__source right-align">Source d'où provient le témoignage</p>
             </article>
             <!--Témoignage 3-->
-            <article class="testimony-wrapper__testimonial"></article>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.</p>
-            <div class="testimony-wrapper__source">Source d'où provient le témoignage</div>
+            <article class="testimony-wrapper__testimonial" id="left">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.</p>
+                <p class="testimony-wrapper__source">Source d'où provient le témoignage</p>
             </article>
         </div>
     </section>
