--- a/index.html
+++ b/index.html
@@ -143,11 +143,24 @@
             </article>
     </section>
     <section style="background-color: white;">
-        <div class="luttes-wrapper">
-            <h1>Nos luttes</h1>
-            <hr>
+        <h1>Nos luttes</h1>
+        <hr>
+        <div class="lutte-wrapper">
+            <div class="lutter-wrapper__left-section">
+                <ul class="lutte-wrapper__fight-list">
+                    <li><a href="#">Droits des personnes en détention <span class="arrow">→</span></a></li>
+                    <li><a href="#">Droits des peuples autochtones <span class="arrow">→</span></a></li>
+                    <li><a href="#">Racisme, exclusion sociale et laïcité <span class="arrow">→</span></a></li>
+                    <li><a href="#">Droits des personnes migrantes <span class="arrow">→</span></a></li>
+                    <li><a href="#">Environnement et droits humains <span class="arrow">→</span></a></li>
+                    <li><a href="#">Droits à la santé <span class="arrow">→</span></a></li>
+                </ul>
+                <button class="lutte=wrapper__see-more">Voir plus</button>
+            </div>
+            <div class="lutter-wrapper__right-section">
+                <img src="sources/medias/img_luttes.png" alt="Lutte image">
+            </div>
         </div>
-
     </section>
     <section>
         <h1>Témoignages</h1>
