--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <button class="lutte=wrapper__see-more">Voir plus</button>
             </div>
             <div class="lutter-wrapper__right-section">
-                <img src="sources/medias/img_luttes.png" alt="Lutte image">
+                <img src="sources/medias/—Pngtree—three fists up raised high_9140570 1.png" alt="Lutte image">
             </div>
         </div>
     </section>
