--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                     <h5>27 août 2024 | Lettre ouverte</h5>
                 </div>
             </article>
+            <button class="section-card__see-more">Voir plus</button>
     </section>
     <section style="background-color: white;">
         <h1>Nos luttes</h1>
@@ -155,7 +156,7 @@
                     <li><a href="#">Environnement et droits humains <span class="arrow">→</span></a></li>
                     <li><a href="#">Droits à la santé <span class="arrow">→</span></a></li>
                 </ul>
-                <button class="lutte=wrapper__see-more">Voir plus</button>
+                <button class="lutte-wrapper__see-more">Voir plus</button>
             </div>
             <div class="lutter-wrapper__right-section">
                 <img src="sources/medias/—Pngtree—three fists up raised high_9140570 1.png" alt="Lutte image">
