cleaning up code

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                             class="fa fa-linkedin"></i></a></li>
             </ul>
         </div>
-        <div>
+        <div class="footer-wrapper__nav">
             <ul class="footer-wrapper__links">
                 <li><a link="#">Accueil</a></li>
                 <li> <a link="#">Luttes</a></li>
