--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="section-card__card">
                 <img src="sources/medias/nouvelle1.png" alt="nouvelle #1">
                 <div class="section-card__container">
-                    <h4>Pour l'interdiction des interpellations policières une bonne fois pour toute</h4>
+                    <h4>Pour l'interdiction des interpellations policières une bonne fois pour toute.</h4>
                     <h5>4 septembre 2024 | Communiqués</h5>
 
                 </div>
@@ -157,7 +157,7 @@
                 </ul>
                 <button class="lutte=wrapper__see-more">Voir plus</button>
             </div>
-            <div class="lutter-wrapper__right-section">
+            <div class="lutte-wrapper__right-section">
                 <img src="sources/medias/—Pngtree—three fists up raised high_9140570 1.png" alt="Lutte image">
             </div>
         </div>
@@ -191,22 +191,7 @@
             </article>
         </div>
     </section>
-    <script>
-        const hamburger = document.querySelector('.hamburger');
-        const mobileMenuOverlay = document.querySelector('.mobile-menu-overlay');
-
-        hamburger.addEventListener('click', () => {
-            mobileMenuOverlay.classList.toggle('show');
-            hamburger.classList.toggle('open');
-        });
-    </script>
-    <script>
-        const closeButton = document.getElementById("disclaimer-close");
-        const disclaimer = document.getElementById("disclaimer");
-        closeButton.addEventListener('click', () => {
-            disclaimer.style.display = "none";
-        });
-    </script>
+   
 
 
     <p>Membres: Maïk Hamel, Pierre-Luc Proulx, Raphaël Dumont</p><br>
