continuation ajustement et création section don

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
     <div class="disclaimer" id="disclaimer">
         <p>Ce site est un une refonte dans le contexte d'un projet étudiant.
-            <strong><a href="#">Consulter le site original</a></strong>
-
+            <strong><a href="https://liguedesdroits.ca/">Consulter le site original</a></strong>
+            
         </p>
         <i class="fa-solid fa-x fa-2x" id="disclaimer-close"></i>
     </div>
@@ -191,11 +191,22 @@
             </article>
         </div>
     </section>
-   
+   <section class="don">
+    <!--ANIMATION TIMELAPSE ICI!!!!!!!!!-->
+        <h1>PARCE QUE LES DROITS HUMAINS, C'EST POUR TOUT LE MONDE</h1>
+        <hr>
+        <div class="don-wrapper">
+            <article class="__description-don-wrapper">
+                <p>Contre les multiples risques et reculs auxquels les droits humains font face, au Québec et au Canada, comme ailleurs, il faut parler, agir et dénoncer.</p>
+            </article>
+            <article class="bouton-don">
+                <button>donner</button>
+            </article>
+        </div>
+   </section>
 
 
-    <p>Membres: Maïk Hamel, Pierre-Luc Proulx, Raphaël Dumont</p><br>
-    <a href="https://liguedesdroits.ca/">Lien vers le site original</a>
+    
     <a href="https://github.com/TheBoyzs/droits-et-libertes-the-boyzs/tree/main">Lien vers le repo Github</a>
     <script src="main.js"></script>
     <script src="https://kit.fontawesome.com/b6c9a53dc1.js" crossorigin="anonymous"></script>
